--- a/app/src/main/res/layout/list_news.xml
+++ b/app/src/main/res/layout/list_news.xml
@@ -12,65 +12,65 @@
     android:background="@drawable/shape_list_white"
     android:elevation="2dp">
 
-    <ImageView
-        android:id="@+id/newsImage"
-        android:layout_width="150dp"
-        android:layout_height="120dp"
-        android:background="@drawable/shape_image_loading"
-        android:scaleType="fitXY"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ProgressBar
-        android:id="@+id/progressBar"
-        style="?android:attr/progressBarStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:visibility="visible"
-        app:layout_constraintBottom_toBottomOf="@id/newsImage"
-        app:layout_constraintLeft_toLeftOf="@id/newsImage"
-        app:layout_constraintRight_toRightOf="@id/newsImage"
-        app:layout_constraintTop_toTopOf="@id/newsImage" />
-
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toTopOf="parent"
-        app:layout_constraintLeft_toRightOf="@+id/newsImage"
-        app:layout_constraintTop_toBottomOf="parent">
+        android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/newsName"
+        <FrameLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:ellipsize="end"
-            android:maxLines="1"
-            android:textColor="@android:color/black"
-            android:textSize="18sp"
-            tools:text="MERCEDES 300SL" />
+            android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/newsPrice"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="3dp"
-            android:textColor="@android:color/black"
-            android:textSize="14sp"
-            tools:text="€ 30000000" />
+            <ImageView
+                android:id="@+id/newsImage"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                android:background="@drawable/shape_image_loading"
+                android:scaleType="fitXY"
+                app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/newsFuelType"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="3dp"
-            android:textColor="@android:color/black"
-            android:textSize="14sp"
-            tools:text="Gasoline" />
+            <ProgressBar
+                android:id="@+id/progressBar"
+                style="?android:attr/progressBarStyleSmall"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:layout_gravity="center"
+                android:visibility="visible" />
 
+        </FrameLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginLeft="10dp"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/newsTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:maxLines="2"
+                android:textColor="@android:color/black"
+                android:textSize="14sp"
+                tools:text="Jeff Bezos and Amazon Employees Join Debate Over Its Culture" />
+
+            <TextView
+                android:id="@+id/newsByLine"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:ellipsize="end"
+                android:maxLines="2"
+                android:textColor="@android:color/black"
+                android:textSize="10sp"
+                tools:text="By DAVID STREITFELD and JODI KANTOR" />
+        </LinearLayout>
     </LinearLayout>
+
 
     <TextView
         android:layout_width="wrap_content"
